Video still running when select other fragment on tablet

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,7 +42,8 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".ui.RecipeDetailsActivity" />
         </activity>
-        <activity android:name=".ui.PlayerActivity"></activity>
+        <activity android:name=".ui.PlayerActivity" />
+        <activity android:name=".ui.MasterListFragmentActivity"></activity>
     </application>
 
 </manifest>
