--- a/build.gradle
+++ b/build.gradle
@@ -26,3 +26,15 @@ allprojects {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
+
+ext{
+    compileSdkVersion = 27
+    buildToolsVersion = '27.0.3'
+    minSdkVersion = 15
+
+    supportLibraryVersion = '27.1.1'
+    espressoVersion = '3.0.2'
+    runnerVersion = '1.0.2'
+    rulesVersion = '1.0.2'
+}
