--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,7 +38,12 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.3.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
     implementation "com.android.support.test.espresso:espresso-idling-resource:$rootProject.ext.espressoVersion"
+    implementation "android.arch.persistence.room:runtime:$room_version"
+    implementation "android.arch.lifecycle:extensions:$room_version"
 
+
+    annotationProcessor "android.arch.persistence.room:compiler:$room_version"
+    annotationProcessor "android.arch.lifecycle:compiler:$room_version"
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
 
     testImplementation 'junit:junit:4.12'
